--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/styles/*": ["styles/*"],
+      "@/layouts/*": ["layouts/*"],
       "@/pages/*": ["pages/*"]
     }
   }
