feat(books): added books page and relevant code

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@/components/*": ["components/*"],
       "@/styles/*": ["styles/*"],
       "@/layouts/*": ["layouts/*"],
-      "@/pages/*": ["pages/*"]
+      "@/pages/*": ["pages/*"],
+      "@/lib/*": ["lib/*"]
     }
   }
 }
