--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/mdx": "^12.0.7",
     "@notionhq/client": "^0.4.13",
     "next": "12.0.7",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.47.0"
