--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.7",
     "@notionhq/client": "^0.4.13",
+    "dotenv": "^16.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.7",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
