feat(middleware): adding middleware to verify tokens

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
       "@/styles/*": ["styles/*"],
       "@/layouts/*": ["layouts/*"],
       "@/pages/*": ["pages/*"],
-      "@/lib/*": ["lib/*"]
+      "@/lib/*": ["lib/*"],
+      "@/": ["/*"]
     }
   }
 }
